--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Family Form</title>
+  <title>Family Data Entry</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
       background-color: #f4f4f4;
+      padding: 20px;
     }
     form {
       background: #fff;
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <h2>Family Data Entry</h2>
+  <h2>Family Data Entry Form</h2>
   <form action="https://script.google.com/macros/s/AKfycbyetf4IdmQvrNebPgDEsoxHe-Xy-m4Za0bnth0NF66medIgM-bp_kFJXlDyF5SXceEnoQ/exec" method="POST">
     <label for="language">Language:</label>
     <input type="text" id="language" name="language" required>
