--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     }
     h2 {
       text-align: center;
+      margin-bottom: 5px;
+    }
+    #lblError {
+      text-align: center;
+      color: #d9534f;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
     form {
       background: #fff;
@@ -25,7 +32,7 @@
       margin-top: 10px;
       font-weight: bold;
     }
-    input[type="text"] {
+    select, input[type="text"] {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
@@ -44,7 +51,18 @@
 </head>
 <body>
   <h2>Family Data Entry</h2>
-  <form action="https://script.google.com/macros/s/AKfycbxw84rcMHbwP5UiMxwZDoy4OlMP2zPUoicew43hHXfLU-BLekf9mpLFtBdfpzXAOv85/exec" method="POST">
+  <div id="lblError">Note: Surname, Name are mandatory</div>
+
+  <form id="familyForm">
+    <label for="language">Output Language:</label>
+    <select id="language" name="language" required>
+      <option value="">-- Select Language --</option>
+      <option value="English">English</option>
+      <option value="Telugu">Telugu</option>
+      <option value="Hindi">Hindi</option>
+      <option value="Urdu">Urdu</option>
+    </select>
+
     <label for="surname">Surname:</label>
     <input type="text" id="surname" name="surname" required>
 
@@ -53,5 +71,52 @@
 
     <button type="submit">Submit</button>
   </form>
+
+ <script>
+  const form = document.getElementById("familyForm");
+  const lblError = document.getElementById("lblError");
+
+  form.addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    const language = form.language.value.trim();
+    const surname = form.surname.value.trim();
+    const name = form.name.value.trim();
+
+    // Basic client-side check
+    if (!language || !surname || !name) {
+      lblError.style.color = "#d9534f";
+      lblError.textContent = "❌ All fields are required. Please fill in Output Language, Surname, and Name.";
+      return;
+    }
+
+    const data = new URLSearchParams();
+    data.append("language", language);
+    data.append("surname", surname);
+    data.append("name", name);
+
+    fetch("https://script.google.com/macros/s/AKfycbyetf4IdmQvrNebPgDEsoxHe-Xy-m4Za0bnth0NF66medIgM-bp_kFJXlDyF5SXceEnoQ/exec", {
+      method: "POST",
+      body: data
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error(`Server returned ${response.status}`);
+      }
+      return response.text();
+    })
+    .then(result => {
+      lblError.style.color = "green";
+      lblError.textContent = "✅ Record saved successfully.";
+      form.reset();
+    })
+    .catch(error => {
+      lblError.style.color = "#d9534f";
+      lblError.textContent = `❌ Submission failed: ${error.message}`;
+      console.error("Submission error:", error);
+    });
+  });
+</script>
+
 </body>
 </html>
