--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h2>Family Data Entry</h2>
   <div id="lblError">Note: Surname, Name are mandatory</div>
 
-  <form id="familyForm">
+  <form action="https://script.google.com/macros/s/AKfycbyetf4IdmQvrNebPgDEsoxHe-Xy-m4Za0bnth0NF66medIgM-bp_kFJXlDyF5SXceEnoQ/exec" method="POST" target="hidden_iframe" onsubmit="return handleSubmit();">
     <label for="language">Output Language:</label>
     <select id="language" name="language" required>
       <option value="">-- Select Language --</option>
@@ -72,51 +72,25 @@
     <button type="submit">Submit</button>
   </form>
 
- <script>
-  const form = document.getElementById("familyForm");
-  const lblError = document.getElementById("lblError");
+  <iframe name="hidden_iframe" style="display:none;"></iframe>
 
-  form.addEventListener("submit", function(event) {
-    event.preventDefault();
+  <script>
+    function handleSubmit() {
+      const language = document.getElementById("language").value.trim();
+      const surname = document.getElementById("surname").value.trim();
+      const name = document.getElementById("name").value.trim();
+      const lblError = document.getElementById("lblError");
 
-    const language = form.language.value.trim();
-    const surname = form.surname.value.trim();
-    const name = form.name.value.trim();
-
-    // Basic client-side check
-    if (!language || !surname || !name) {
-      lblError.style.color = "#d9534f";
-      lblError.textContent = "❌ All fields are required. Please fill in Output Language, Surname, and Name.";
-      return;
-    }
-
-    const data = new URLSearchParams();
-    data.append("language", language);
-    data.append("surname", surname);
-    data.append("name", name);
-
-    fetch("https://script.google.com/macros/s/AKfycbyetf4IdmQvrNebPgDEsoxHe-Xy-m4Za0bnth0NF66medIgM-bp_kFJXlDyF5SXceEnoQ/exec", {
-      method: "POST",
-      body: data
-    })
-    .then(response => {
-      if (!response.ok) {
-        throw new Error(`Server returned ${response.status}`);
+      if (!language || !surname || !name) {
+        lblError.style.color = "#d9534f";
+        lblError.textContent = "❌ All fields are required. Please fill in Output Language, Surname, and Name.";
+        return false;
       }
-      return response.text();
-    })
-    .then(result => {
-      lblError.style.color = "green";
-      lblError.textContent = "✅ Record saved successfully.";
-      form.reset();
-    })
-    .catch(error => {
-      lblError.style.color = "#d9534f";
-      lblError.textContent = `❌ Submission failed: ${error.message}`;
-      console.error("Submission error:", error);
-    });
-  });
-</script>
 
+      lblError.style.color = "green";
+      lblError.textContent = "✅ Record submitted. Please check the sheet.";
+      return true;
+    }
+  </script>
 </body>
 </html>
