--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h2>Family Data Entry</h2>
   <div id="lblError">Note: Surname, Name are mandatory</div>
 
-  <form action="https://script.google.com/macros/s/AKfycbxw84rcMHbwP5UiMxwZDoy4OlMP2zPUoicew43hHXfLU-BLekf9mpLFtBdfpzXAOv85/exec" method="POST" target="hidden_iframe" onsubmit="return handleSubmit();">
+  <form action="https://script.google.com/macros/s/AKfycbyetf4IdmQvrNebPgDEsoxHe-Xy-m4Za0bnth0NF66medIgM-bp_kFJXlDyF5SXceEnoQ/exec" method="POST" target="hidden_iframe" onsubmit="return handleSubmit();">
     <label for="language">Output Language:</label>
     <select id="language" name="language" required>
       <option value="">-- Select Language --</option>
@@ -72,7 +72,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <iframe name="hidden_iframe" style="display:none;"></iframe>
+  <iframe name="hidden_iframe" style="display:none;" onload="handleIframeLoad();"></iframe>
 
   <script>
     function handleSubmit() {
@@ -87,12 +87,16 @@
         return false;
       }
 
+      lblError.style.color = "#007bff";
+      lblError.textContent = "⏳ Submitting...";
+      return true;
+    }
+
+    function handleIframeLoad() {
+      const lblError = document.getElementById("lblError");
       lblError.style.color = "green";
       lblError.textContent = "✅ Record submitted. Please check the sheet.";
-      return true;
     }
   </script>
 </body>
 </html>
-
-
