--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ button.skip { background: #ff9800; }
 
 <script>
 document.addEventListener("DOMContentLoaded", function(){
-const scriptURL = "https://script.google.com/macros/s/AKfycbwZZrIPcM0X3T41D6pMfsMhzMSGewY6AB3Cj8QS-4EUdaDmzsIoSmx_JlOKKEui1JHGFg/exec";
+const scriptURL = "YOUR_SCRIPT_URL_HERE"; // ← Replace with your deployed Web App URL
 const lblMsg = document.getElementById("lblMsg"),
       midField = document.getElementById("mid"),
       surnameField = document.getElementById("surname"),
@@ -92,7 +92,7 @@ function showMsg(text, color) {
 }
 
 function initForm() {
-  showMsg(memberConsent, "blue"); // Always show consent first
+  showMsg(memberConsent, "blue");
 
   fetch(scriptURL + "?action=getNextId")
     .then(r => r.json())
