--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ button.skip { background: #ff9800; }
 
 <script>
 document.addEventListener("DOMContentLoaded", function(){
-const scriptURL = "YOUR_SCRIPT_URL_HERE"; // ← Replace with your deployed Web App URL
+const scriptURL = "https://script.google.com/macros/s/AKfycbwZZrIPcM0X3T41D6pMfsMhzMSGewY6AB3Cj8QS-4EUdaDmzsIoSmx_JlOKKEui1JHGFg/exec"; // ← Replace with your deployed Web App URL
 const lblMsg = document.getElementById("lblMsg"),
       midField = document.getElementById("mid"),
       surnameField = document.getElementById("surname"),
