--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ button.skip { background: #ff9800; }
 </form>
 
 <script>
+const midField = document.getElementById("mid");
 document.addEventListener("DOMContentLoaded", function(){
 const scriptURL = "https://script.google.com/macros/s/AKfycbwZZrIPcM0X3T41D6pMfsMhzMSGewY6AB3Cj8QS-4EUdaDmzsIoSmx_JlOKKEui1JHGFg/exec";
 const lblMsg = document.getElementById("lblMsg"),
